<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/prefcat_settings_title"
        android:key="pref_default_storage_settings">
    	<EditTextPreference android:title="@string/pref_start_freq_setting_title"
    	    android:key="pref_startFreq"
			android:defaultValue="@string/pf_default_start"
    	    android:summary="@string/pref_start_freq_setting_summary">
    	</EditTextPreference>
    	<EditTextPreference android:title="@string/pref_stop_freq_setting_title"
    	    android:key="pref_stopFreq"
			android:defaultValue="@string/pf_default_stop"
    	    android:summary="@string/pref_stop_freq_setting_summary">
    	</EditTextPreference>
    	<EditTextPreference android:title="@string/pref_steps_setting_title"
    	    android:key="pref_Steps"
			android:defaultValue="@string/pf_default_steps"
    	    android:summary="@string/pref_steps_setting_summary">
    	</EditTextPreference>
		<EditTextPreference android:title="@string/pref_ref_imp_setting_title"
			android:key="pref_RefImp"
			android:defaultValue="@string/pf_default_ref_imp"
			android:summary="@string/pref_ref_imp_setting_summary">
		</EditTextPreference>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="pref_Bluetooth"
			android:summary="@string/pref_bluetooth_setting_summary"
			android:title="@string/pref_bluetooth_setting_title" >
		</CheckBoxPreference>
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="pref_FastScan"
			android:summary="@string/pref_fastscan_setting_summary"
			android:title="@string/pref_fastscan_setting_title" >
		</CheckBoxPreference>
	</PreferenceCategory>
	<!--
    <PreferenceCategory
        android:title="@string/prefcat_serial_settings_title"
        android:key="pref_serial_settings" >
	    <ListPreference
	        android:key="pref_default_baud_rate"
	        android:title="@string/pref_default_baud_rate_title"
	        android:summary="@string/pref_baud_rate_summary"
	        android:defaultValue="@string/pref_baud_rate"
	        android:entries="@array/baudRate"
	        android:entryValues="@array/baudRateValues" />
	   	<ListPreference
	        android:key="pref_default_data_bits"
	        android:title="@string/pref_default_data_bits_title"
	        android:summary="@string/pref_default_data_bits_summary"
	        android:defaultValue="@string/pref_data_bits"
	        android:entries="@array/dataBits"
	        android:entryValues="@array/dataBitValues" />
	   	<ListPreference
	        android:key="pref_parity"
	        android:title="@string/pref_default_parity_title"
	        android:summary="@string/pref_default_parity_summary"
	        android:defaultValue="@string/pref_parity"
	        android:entries="@array/parity"
	        android:entryValues="@array/parityValues" />
	   	<ListPreference
	        android:key="pref_default_stop_bit"
	        android:title="@string/pref_default_stop_bit_title"
	        android:summary="@string/pref_default_stop_bit_summary"
	        android:defaultValue="@string/pref_stop_bit"
	        android:entries="@array/stopBit"
	        android:entryValues="@array/stopBitValues" />
	    <ListPreference
	        android:key="pref_default_flow_control"
	        android:title="@string/pref_default_flow_control_title"
	        android:summary="@string/pref_default_flow_control_summary"
	        android:defaultValue="@string/pref_flow_control"
	        android:entries="@array/flowControl"
	        android:entryValues="@array/flowControlValues" />
    </PreferenceCategory>
	-->
</PreferenceScreen>
